# agentic-ai-memorymanagement

./: .gitignore  README.md  app6.py  config.py  pyproject.toml
agent/: intent_agent.py  policy_agent.py  reply_agent.py  search_agent.py  sentiment_agent.py  supervisor_agent.py  tools.py  workflow.py
data/: chunker.py  ingest.py  loader.py
embeddings/: embed.py
memory/: __init__.py  db.py
sample_data/: create_policy_pdf.py  customer_support_tickets.csv  internal_notes.txt
session/: state.py
validation_data/: agent_notes_jan_2024.txt  chat_logs_refund_cases.txt  escalation_notes_q1_2024.txt  tickets_electronics.csv  tickets_fashion.csv  tickets_home_appliances.csv
vectordb/: pinecone_store.py
